// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentFilters when components prop is set to multiple components renders minimal filters 1`] = `
"<div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\">
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__12\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__12__BV_label_\\">Component Types</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__13\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__13_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__13_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__13_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__13_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__13_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__13_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__17\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__17__BV_label_\\">Platforms</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__18\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__18_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__18_BV_option_0\\"><span>undefined</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__20\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__20__BV_label_\\">Component</label>
              <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                  <option value=\\"\\">Please select a component</option>
                  <option value=\\"test-component-id-1\\">test-component-id-1</option>
                  <option value=\\"test-component-id-2\\">test-component-id-2</option>
                  <option value=\\"test-component-id-3\\">test-component-id-3</option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields renders all the filters, including component filter but excluding the test outcomes filter 1`] = `
"<div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\">
        <!---->
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__28\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__28__BV_label_\\">Teams</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__29\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\" id=\\"__BVID__29_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_0\\"><span>test-team-id-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\" id=\\"__BVID__29_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_1\\"><span>test-team-id-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\" id=\\"__BVID__29_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_2\\"><span>test-team-id-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\" id=\\"__BVID__29_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_3\\"><span>test-team-id-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\" id=\\"__BVID__29_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_4\\"><span>test-team-id-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\" id=\\"__BVID__29_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__29_BV_option_5\\"><span>test-team-id-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__36\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__36__BV_label_\\">Tags</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__37\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\" id=\\"__BVID__37_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_0\\"><span>test-tag-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\" id=\\"__BVID__37_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_1\\"><span>test-tag-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\" id=\\"__BVID__37_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_2\\"><span>test-tag-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-b\\" id=\\"__BVID__37_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_3\\"><span>test-tag-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\" id=\\"__BVID__37_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_4\\"><span>test-tag-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-b\\" id=\\"__BVID__37_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_5\\"><span>test-tag-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__44\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__44__BV_label_\\">Component Types</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__45\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__45_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__45_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__45_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__45_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__45_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__45_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__49\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__49__BV_label_\\">Platforms</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__50\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\" id=\\"__BVID__50_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__50_BV_option_0\\"><span>test-platform-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\" id=\\"__BVID__50_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__50_BV_option_1\\"><span>test-platform-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\" id=\\"__BVID__50_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__50_BV_option_2\\"><span>test-platform-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__54\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__54__BV_label_\\">Component</label>
              <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                  <option value=\\"\\">Please select a component</option>
                  <option value=\\"test-component-id-1\\">test-component-id-1</option>
                  <option value=\\"test-component-id-2\\">test-component-id-2</option>
                  <option value=\\"test-component-id-3\\">test-component-id-3</option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields when component filter is not enabled, does not render the component filter 1`] = `
"<div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\">
        <!---->
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__451\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__451__BV_label_\\">Teams</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__452\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\" id=\\"__BVID__452_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_0\\"><span>test-team-id-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\" id=\\"__BVID__452_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_1\\"><span>test-team-id-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\" id=\\"__BVID__452_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_2\\"><span>test-team-id-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\" id=\\"__BVID__452_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_3\\"><span>test-team-id-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\" id=\\"__BVID__452_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_4\\"><span>test-team-id-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\" id=\\"__BVID__452_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__452_BV_option_5\\"><span>test-team-id-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__459\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__459__BV_label_\\">Tags</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__460\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\" id=\\"__BVID__460_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_0\\"><span>test-tag-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\" id=\\"__BVID__460_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_1\\"><span>test-tag-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\" id=\\"__BVID__460_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_2\\"><span>test-tag-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-b\\" id=\\"__BVID__460_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_3\\"><span>test-tag-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\" id=\\"__BVID__460_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_4\\"><span>test-tag-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-b\\" id=\\"__BVID__460_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__460_BV_option_5\\"><span>test-tag-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__467\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__467__BV_label_\\">Component Types</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__468\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__468_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__468_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__468_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__468_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__468_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__468_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__472\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__472__BV_label_\\">Platforms</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__473\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\" id=\\"__BVID__473_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__473_BV_option_0\\"><span>test-platform-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\" id=\\"__BVID__473_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__473_BV_option_1\\"><span>test-platform-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\" id=\\"__BVID__473_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__473_BV_option_2\\"><span>test-platform-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with all filterable fields when test outcomes filter is enabled, renders the test outcomes filter 1`] = `
"<div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\">
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__62\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__62__BV_label_\\">Test Outcomes</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__63\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"fail\\" id=\\"__BVID__63_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__63_BV_option_0\\"><span>fail</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"not-applicable\\" id=\\"__BVID__63_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__63_BV_option_1\\"><span>not-applicable</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"pass\\" id=\\"__BVID__63_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__63_BV_option_2\\"><span>pass</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__67\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__67__BV_label_\\">Teams</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__68\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\" id=\\"__BVID__68_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_0\\"><span>test-team-id-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\" id=\\"__BVID__68_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_1\\"><span>test-team-id-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-a\\" id=\\"__BVID__68_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_2\\"><span>test-team-id-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-b\\" id=\\"__BVID__68_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_3\\"><span>test-team-id-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-a\\" id=\\"__BVID__68_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_4\\"><span>test-team-id-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-b\\" id=\\"__BVID__68_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__68_BV_option_5\\"><span>test-team-id-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__75\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__75__BV_label_\\">Tags</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__76\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\" id=\\"__BVID__76_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_0\\"><span>test-tag-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\" id=\\"__BVID__76_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_1\\"><span>test-tag-1-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-a\\" id=\\"__BVID__76_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_2\\"><span>test-tag-2-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-b\\" id=\\"__BVID__76_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_3\\"><span>test-tag-2-b</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-a\\" id=\\"__BVID__76_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_4\\"><span>test-tag-3-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-b\\" id=\\"__BVID__76_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__76_BV_option_5\\"><span>test-tag-3-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__83\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__83__BV_label_\\">Component Types</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__84\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__84_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__84_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__84_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__84_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__84_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__84_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__88\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__88__BV_label_\\">Platforms</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__89\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\" id=\\"__BVID__89_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__89_BV_option_0\\"><span>test-platform-id-1</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-2\\" id=\\"__BVID__89_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__89_BV_option_1\\"><span>test-platform-id-2</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-3\\" id=\\"__BVID__89_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__89_BV_option_2\\"><span>test-platform-id-3</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__93\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__93__BV_label_\\">Component</label>
              <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                  <option value=\\"\\">Please select a component</option>
                  <option value=\\"test-component-id-1\\">test-component-id-1</option>
                  <option value=\\"test-component-id-2\\">test-component-id-2</option>
                  <option value=\\"test-component-id-3\\">test-component-id-3</option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ComponentFilters when components prop is set to multiple components with duplicate filter values dedupes the filter values 1`] = `
"<div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
      <g></g>
    </svg> Filters
  </button>
  <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
    <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
      <div class=\\"card-columns\\">
        <!---->
        <!---->
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__517\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__517__BV_label_\\">Test Outcomes</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__518\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"fail\\" id=\\"__BVID__518_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__518_BV_option_0\\"><span>fail</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"not-applicable\\" id=\\"__BVID__518_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__518_BV_option_1\\"><span>not-applicable</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"testOutcome\\" class=\\"custom-control-input\\" value=\\"pass\\" id=\\"__BVID__518_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__518_BV_option_2\\"><span>pass</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__522\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__522__BV_label_\\">Teams</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__523\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-a\\" id=\\"__BVID__523_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__523_BV_option_0\\"><span>test-team-id-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-b\\" id=\\"__BVID__523_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__523_BV_option_1\\"><span>test-team-id-1-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__526\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__526__BV_label_\\">Tags</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__527\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-a\\" id=\\"__BVID__527_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__527_BV_option_0\\"><span>test-tag-1-a</span></label></div>
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-b\\" id=\\"__BVID__527_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__527_BV_option_1\\"><span>test-tag-1-b</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__530\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__530__BV_label_\\">Component Types</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__531\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__531_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__531_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <fieldset class=\\"form-group\\" id=\\"__BVID__533\\">
              <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__533__BV_label_\\">Platforms</legend>
              <div>
                <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__534\\">
                  <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"test-platform-id-1\\" id=\\"__BVID__534_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__534_BV_option_0\\"><span>test-platform-id-1</span></label></div>
                </div>
                <!---->
                <!---->
                <!---->
              </div>
            </fieldset>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card bg-secondary\\">
          <!---->
          <!---->
          <div class=\\"card-body p-2\\">
            <!---->
            <!---->
            <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__536\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__536__BV_label_\\">Component</label>
              <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                  <option value=\\"\\">Please select a component</option>
                  <option value=\\"test-component-id-1\\">test-component-id-1</option>
                  <option value=\\"test-component-id-2\\">test-component-id-2</option>
                  <option value=\\"test-component-id-3\\">test-component-id-3</option>
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;
